[package]
name = "hls2dash"
version = "1.1.13"
edition = "2021"
description = "HLS to DASH transpackaging proxy"

[[bin]]
name = "hls2dash"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "gzip", "deflate"] }
m3u8-rs = "6"
moka = { version = "0.12", features = ["future"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
url = "2"
chrono = { version = "0.4" }
anyhow = "1"
thiserror = "1"
futures = "0.3"
